--- a/index.html
+++ b/index.html
@@ -29,19 +29,15 @@
     </header>
     
 <main>
-    <h2>Latest episode:</h2>
+    <h2>Welcome!</h2>
     <div class="video-container">
         <iframe 
-            src="https://www.youtube.com/embed/q87pwu_pZMA" 
+            src="2136b7e1-0902-479c-b925-f286222ee6af.MP4" 
             title="YouTube video player" 
             allowfullscreen>
         </iframe>
 
-        <div class="video-text">
-            <h2>Experimental electronic rock</h2>
-            <p>In this episode we will discuss experimental electronic rock music. Its origin, artists, and our thoughts on the genre.</p>
-        </div>
-    </div>
+    
 </main>
 <footer><strong>Contact: tunewithlune@gmail.com</strong></footer>
 </body>
